--- a/mods/entity-model-features.pw.toml
+++ b/mods/entity-model-features.pw.toml
@@ -1,6 +1,6 @@
 name = "[EMF] Entity Model Features [Fabric & Forge]"
 filename = "entity_model_features_neoforge_1.21.1-2.4.1.jar"
-side = "both"
+side = "client"
 
 [download]
 hash-format = "sha1"
