--- a/mods/entity-texture-features-fabric.pw.toml
+++ b/mods/entity-texture-features-fabric.pw.toml
@@ -1,6 +1,6 @@
 name = "[ETF] Entity Texture Features - [Fabric & Forge]"
 filename = "entity_texture_features_neoforge_1.21.1-6.2.9.jar"
-side = "both"
+side = "client"
 
 [download]
 hash-format = "sha1"
