--- a/mods/chunk-sending-forge-fabric.pw.toml
+++ b/mods/chunk-sending-forge-fabric.pw.toml
@@ -1,6 +1,6 @@
 name = "Chunk Sending[Forge/Fabric]"
 filename = "chunksending-1.21-2.8.jar"
-side = "both"
+side = "server"
 
 [download]
 hash-format = "sha1"
