--- a/mods/fast-paintings.pw.toml
+++ b/mods/fast-paintings.pw.toml
@@ -1,6 +1,6 @@
 name = "Fast Paintings"
 filename = "fastpaintings-1.21-1.2.15-neoforge.jar"
-side = "both"
+side = "client"
 
 [download]
 hash-format = "sha1"
