--- a/mods/leaky.pw.toml
+++ b/mods/leaky.pw.toml
@@ -1,6 +1,6 @@
 name = "Leaky - Item Lag Fix[Forge/Fabric]"
 filename = "leaky-1.21-2.1.jar"
-side = "both"
+side = "server"
 
 [download]
 hash-format = "sha1"
