--- a/mods/no-chat-reports.pw.toml
+++ b/mods/no-chat-reports.pw.toml
@@ -1,6 +1,6 @@
 name = "No Chat Reports"
 filename = "NoChatReports-NEOFORGE-1.21.1-v2.9.1.jar"
-side = "both"
+side = "server"
 
 [download]
 hash-format = "sha1"
