Update mods, fix crash

--- a/mods/bartering-station.pw.toml
+++ b/mods/bartering-station.pw.toml
@@ -1,4 +1,4 @@
-name = "Bartering Station [Forge & Fabric]"
+name = "Bartering Station"
 filename = "BarteringStation-v21.1.0-1.21.1-NeoForge.jar"
 side = "both"
 
