--- a/mods/diagonal-fences.pw.toml
+++ b/mods/diagonal-fences.pw.toml
@@ -1,4 +1,4 @@
-name = "Diagonal Fences [Forge & Fabric]"
+name = "Diagonal Fences"
 filename = "DiagonalFences-v21.1.1-1.21.1-NeoForge.jar"
 side = "both"
 
