--- a/mods/diagonal-windows.pw.toml
+++ b/mods/diagonal-windows.pw.toml
@@ -1,4 +1,4 @@
-name = "Diagonal Windows [Forge & Fabric]"
+name = "Diagonal Windows"
 filename = "DiagonalWindows-v21.1.1-1.21.1-NeoForge.jar"
 side = "both"
 
