--- a/mods/overflowing-bars.pw.toml
+++ b/mods/overflowing-bars.pw.toml
@@ -1,4 +1,4 @@
-name = "Overflowing Bars [Forge & Fabric]"
+name = "Overflowing Bars"
 filename = "OverflowingBars-v21.1.1-1.21.1-NeoForge.jar"
 side = "both"
 
