--- a/mods/trading-post.pw.toml
+++ b/mods/trading-post.pw.toml
@@ -1,4 +1,4 @@
-name = "Trading Post [Forge & Fabric]"
+name = "Trading Post"
 filename = "TradingPost-v21.1.0-1.21.1-NeoForge.jar"
 side = "both"
 
