--- a/mods/easy-shulker-boxes.pw.toml
+++ b/mods/easy-shulker-boxes.pw.toml
@@ -1,4 +1,4 @@
-name = "Easy Shulker Boxes [Forge & Fabric]"
+name = "Easy Shulker Boxes"
 filename = "EasyShulkerBoxes-v21.1.3-1.21.1-NeoForge.jar"
 side = "both"
 
