--- a/mods/leaves-be-gone.pw.toml
+++ b/mods/leaves-be-gone.pw.toml
@@ -1,4 +1,4 @@
-name = "Leaves Be Gone [Forge & Fabric]"
+name = "Leaves Be Gone"
 filename = "LeavesBeGone-v21.1.0-1.21.1-NeoForge.jar"
 side = "both"
 
